--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5,7 +5,7 @@
 @layer base {
 	html,
 	pre {
-		font-family: -apple-system, BlinkMacSystemFont, 'Inter', ui-sans-serif, system-ui, 'Segoe UI',
+		font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, 'Inter', system-ui, 'Segoe UI',
 			Roboto, Ubuntu, Cantarell, 'Noto Sans', sans-serif, 'Helvetica Neue', Arial,
 			'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 	}
